# python-projdir

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
requirements/: dev.in  dev.txt  tests.txt
src/projdir/: __init__.py  core.py
tests/: test_find.py
