[metadata]
name = projdir
version = attr: projdir.__version__
url = https://github.com/rasmuse/python-projdir
project_urls =
    Source Code = https://github.com/rasmuse/python-projdir
    Issue Tracker = https://github.com/rasmuse/python-projdir/issues
license = MIT License
license_files = LICENSE
author = Rasmus Einarsson
author_email =  mr@rasmuseinarsson.se
maintainer = Rasmus Einarsson
maintainer_email = python-projdir@rasmuseinarsson.se
description = Locate a project directory or a config file.
long_description = file: README.md
long_description_content_type = text/markdown
# See list of classifiers at https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
